@@ -5,9 +5,7 @@ version = '2.3.5.dev0'
 maintainer = 'Mathias Leimgruber'
 
 tests_require = [
-    'collective.testcaselayer',
     'plone.app.testing',
-    'Products.PloneTestCase',
     'ftw.testing',
     'ftw.workspace',
     'ftw.pdfgenerator'
